--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -1,81 +1,85 @@
 @mixin font-face($font-family, $url){
-	@font-face {
-		font-family: '#{$font-family}';
-		src: url('#{$url}.eot');
-		src: url('#{$url}.woff') format('woff'),
-		     url('#{$url}.ttf') format('truetype'),
-		     url('#{$url}.svg') format('svg');
-		font-weight: normal;
-		font-style: normal;
-	}
+  @font-face {
+    font-family: '#{$font-family}';
+    src: url('#{$url}.eot');
+    src: url('#{$url}.woff') format('woff'),
+         url('#{$url}.ttf') format('truetype'),
+         url('#{$url}.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
 }
 
 @mixin button($background){
   cursor: pointer;
-	border-radius: 0;
-	text-transform: uppercase;
-	color:$black;
-	margin-top: 2rem;
-	font-size: .8rem;
-	font-family: $gothamMedium;
-	padding-top: 1rem;
-	padding-bottom:1rem;
-	width: 10rem;   
+  border-radius: 0;
+  text-transform: uppercase;
+  color:$black;
+  margin-top: 2rem;
+  font-size: .8rem;
+  padding-top: 1rem;  
+  padding-bottom:1rem;
+  font-family: $gothamMedium;
+  width: 10rem;   
   position: relative;
-	border: 1px solid $yellow;
+  border: 1px solid $yellow;
   background-size: 26rem; 
   background-repeat: no-repeat;
   background-position: 0%;
-  -webkit-transition: background 400ms ease-in-out;
-  transition: background 400ms ease-in-out;
-  @include media-breakpoint-down(sm) {
-    position: static;
-    background-attachment:scroll;
-    background-size: 70rem; 
-    width: 100%;
-    padding-top: 1.5rem;
-  } 
+ -webkit-transition: background 400ms ease-in-out;
+  transition: background 400ms ease-in-out; 
+  @include media-breakpoint-down(md) {
+    font-family: inherit!important; 
+    font-weight: 600;
+    @include media-breakpoint-down(sm) {
+      position: static;
+      background-attachment:scroll;
+      background-size: 70rem;  
+      width: 100%; 
+    } 
+  }
+
   &:hover{
     background-position: 100%;
     border: 1px solid $yellow;
   }
-	@if $background == 'black' {
-    	color:$white;
-    	margin-left: 1rem;
+  @if $background == 'black' {
+      color:$white;
+      margin-left: 1rem;
       background-image: -webkit-linear-gradient(30deg, $black 50%, $yellow 50%);
       background-image: linear-gradient(30deg, $black 50%, $yellow  50%);
       &:hover{
         color: $black;
       }
-	   }@else{    
+     }@else{    
         &:hover{
           color: $white;
         }
         background-image: -webkit-linear-gradient(30deg, $yellow 50%, $black 50%);
         background-image: linear-gradient(30deg, $yellow 50%, $black  50%);
-	   }
+     }
 }
 
 @mixin watermark(){
-	.watermark{
-		text-transform: uppercase;
-		text-align: center;
-		position: absolute;
-		top: 0;
+  .watermark{
+    text-transform: uppercase;
+    text-align: center;
+    position: absolute;
+    top: 0;
     left: 0;
-		color: $watermark;
-		width: 100%;  
-		font-family: $gothamBold;
-		font-size: 10vw;
-		line-height: .7;
-		z-index: -1;
+    color: $watermark;
+    width: 100%;  
+    font-family: $gothamBold;
+    font-size: 10vw;
+    line-height: .7;
+    z-index: -1;
     @include media-breakpoint-down(lg) {
       top: 1rem;
     }
     @include media-breakpoint-down(sm) {
       top: 2rem;
     }
-	}
+  }
 }
 
 @mixin box-shadow($top, $left, $blur, $color) {
